# ChatServe

./: .gitignore  CMakeLists.txt  build.sh
client/: CMakeLists.txt
include/chatroom/: Room.h
include/core/: EventLoop.h  SHA1.h  ThreadPool.h
include/filetransfer/: FileManager.h
include/http/: ErrorResponse.h  HttpParser.h  HttpRequest.h  HttpResponse.h  Router.h  StaticFileServer.h
include/server/: Acceptor.h  Connection.h  ConnectionRouter.h  MainReactor.h  Reactor.h
include/transfer/: TransferManager.h
include/ws/: SHA1.h  WebSocketAppMessage.h  WebSocketAppParser.h  WebSocketFragmentState.h  WebSocketFrame.h  WebSocketOpcode.h  WebSocketParser.h  WebSocketRouter.h  WebSocketUpgradeResponse.h
scripts/: run.bat  run.sh  valgrind.sh
server/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/chatroom/: Room.cpp
src/core/: EventLoop.cpp  ThreadPool.cpp
src/filetransfer/: FileManager.cpp
src/http/: ErrorResponse.cpp  HttpParser.cpp  Router.cpp  StaticFileServer.cpp
src/server/: Acceptor.cpp  ConnectionRouter.cpp  MainReactor.cpp  Reactor.cpp
src/transfer/: TransferManager.cpp
src/ws/: WebSocketAppParser.cpp  WebSocketFrame.cpp  WebSocketParser.cpp  WebSocketRouter.cpp  WebSocketUpgradeResponse.cpp
static/chat/: app.js  chat.html  style.css
test/: benchmark.py
